; ModuleID = '/home/carl/AnghaBench/linux/drivers/bcma/extr_scan.c_bcma_scan_switch_core.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bcma/extr_scan.c_bcma_scan_switch_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_bus = type { i64, i32 }

@BCMA_HOSTTYPE_PCI = common dso_local global i64 0, align 8
@BCMA_PCI_BAR0_WIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcma_bus*, i32)* @bcma_scan_switch_core to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcma_scan_switch_core(%struct.bcma_bus* %0, i32 %1) #0 {
  %3 = alloca %struct.bcma_bus*, align 8
  %4 = alloca i32, align 4
  store %struct.bcma_bus* %0, %struct.bcma_bus** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.bcma_bus*, %struct.bcma_bus** %3, align 8
  %6 = getelementptr inbounds %struct.bcma_bus, %struct.bcma_bus* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @BCMA_HOSTTYPE_PCI, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load %struct.bcma_bus*, %struct.bcma_bus** %3, align 8
  %12 = getelementptr inbounds %struct.bcma_bus, %struct.bcma_bus* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @BCMA_PCI_BAR0_WIN, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @pci_write_config_dword(i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @pci_write_config_dword(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
